force-app/main/default/objects/OrderItem/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agenzia</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Products (Agenzia)</relationshipLabel>
    <relationshipName>OrderProducts</relationshipName>
    <type>Lookup</type>
</CustomField>