force-app/main/default/objects/OrderItem/fields/BillingMode__c.field-meta.xml
<CustomField>
    <fullName>BillingMode__c</fullName>
    <description>La modalità di fatturazione legata al dato record di order product</description>
    <label>Modalita di Fatturazione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_BillingMethod</valueSetName>
    </valueSet>
</CustomField>