force-app/main/default/objects/OrderItem/fields/BillingProfile__c.field-meta.xml
<CustomField>
    <fullName>BillingProfile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profilo di Fatturazione</label>
    <referenceTo>BillingProfile__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>