force-app/main/default/objects/OrderItem/fields/CampaignName__c.field-meta.xml
<CustomField>
    <fullName>CampaignName__c</fullName>
    <description>la campagna legata al dato record di product option.</description>
    <label>Nome Campagna</label>
    <length>150</length>
    <type>Text</type>
</CustomField>