force-app/main/default/objects/OrderItem/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>La tipologia di canale associato al order product</description>
    <label>Canale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_ProductOptionChannel</valueSetName>
    </valueSet>
</CustomField>