force-app/main/default/objects/OrderItem/fields/CompanyOwner__c.field-meta.xml
<CustomField>
    <fullName>CompanyOwner__c</fullName>
    <description>La company owner legata al dato record di order product</description>
    <label>Company Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>