force-app/main/default/objects/OrderItem/fields/ConsumptionAnalysis__c.field-meta.xml
<CustomField>
    <fullName>ConsumptionAnalysis__c</fullName>
    <formula>NOT(ISBLANK(OccupantsNumber__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Analisi Consumi</label>
    <type>Checkbox</type>
</CustomField>