force-app/main/default/objects/OrderItem/fields/ConsumptionAnnualVAS__c.field-meta.xml
<CustomField>
    <fullName>ConsumptionAnnualVAS__c</fullName>
    <description>Il consumo annuale per i VAS</description>
    <label>Consumo Annuo VAS</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>