force-app/main/default/objects/OrderItem/fields/Convention__c.field-meta.xml
<CustomField>
    <fullName>Convention__c</fullName>
    <description>La convenzione legata al Product option</description>
    <label>Convenzione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>