force-app/main/default/objects/OrderItem/fields/CustomerMarking__c.field-meta.xml
<CustomField>
    <fullName>CustomerMarking__c</fullName>
    <description>la marcatura cliente associata al dato record di product option.</description>
    <label>Marcatura Cliente</label>
    <length>150</length>
    <type>Text</type>
</CustomField>