force-app/main/default/objects/OrderItem/fields/DefaultSpecialDay__c.field-meta.xml
<CustomField>
    <fullName>DefaultSpecialDay__c</fullName>
    <description>Indica il giorno speciale di default (BRIM)</description>
    <label>Giorno speciale default</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_WeekDays</valueSetName>
    </valueSet>
</CustomField>