force-app/main/default/objects/OrderItem/fields/DelayDay__c.field-meta.xml
<CustomField>
    <fullName>DelayDay__c</fullName>
    <description>Il delay del prodotto in gg.</description>
    <label>Delay</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>