force-app/main/default/objects/OrderItem/fields/DelayDayGas__c.field-meta.xml
<CustomField>
    <fullName>DelayDayGas__c</fullName>
    <description>Il Delay del prodotto in gg.</description>
    <label>Delay gas</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>