force-app/main/default/objects/OrderItem/fields/DelayEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>DelayEffectiveDate__c</fullName>
    <label>Delay data decorrenza</label>
    <type>Date</type>
</CustomField>