force-app/main/default/objects/OrderItem/fields/DescriptionSAPBonusContributo__c.field-meta.xml
<CustomField>
    <fullName>DescriptionSAPBonusContributo__c</fullName>
    <description>Utilizzato per la migrazione viene valorrizato com Descrizone_versione SAP</description>
    <label>Descrizione SAP Bonus/Contributo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>