force-app/main/default/objects/OrderItem/fields/DurationDay__c.field-meta.xml
<CustomField>
    <fullName>DurationDay__c</fullName>
    <description>La durata de prodotto in gg.</description>
    <label>Durata</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>