force-app/main/default/objects/OrderItem/fields/DurationDayGas__c.field-meta.xml
<CustomField>
    <fullName>DurationDayGas__c</fullName>
    <description>La Durata del prodotto in gg.</description>
    <label>Durata Gas</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>