force-app/main/default/objects/OrderItem/fields/EmailRecipientVAS__c.field-meta.xml
<CustomField>
    <fullName>EmailRecipientVAS__c</fullName>
    <label>Email destinatario VAS</label>
    <type>Email</type>
</CustomField>