force-app/main/default/objects/OrderItem/fields/EndDateTARI__c.field-meta.xml
<CustomField>
    <fullName>EndDateTARI__c</fullName>
    <label>Data Fine</label>
    <type>Date</type>
</CustomField>