force-app/main/default/objects/OrderItem/fields/EquipmentType__c.field-meta.xml
<CustomField>
    <fullName>EquipmentType__c</fullName>
    <description>La tipologia di apparecchiatura legata al dato record di order product</description>
    <label>Tipo Apparecchiatura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_MeterType</valueSetName>
    </valueSet>
</CustomField>