force-app/main/default/objects/OrderItem/fields/GreenEnergyOption__c.field-meta.xml
<CustomField>
    <fullName>GreenEnergyOption__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Per indicare se è presente(o meno) la presenza dell&apos;opzone Energia Verde per il dato record di Order Product</description>
    <label>Opzione Energia Verde</label>
    <type>Checkbox</type>
</CustomField>