force-app/main/default/objects/OrderItem/fields/GreenGasOption__c.field-meta.xml
<CustomField>
    <fullName>GreenGasOption__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Usato per indicare se è presente(o meno) la presenza dell&apos;opzone Energia Verde per il dato record di Order Product</description>
    <label>Opzione Gas Verde</label>
    <type>Checkbox</type>
</CustomField>