force-app/main/default/objects/OrderItem/fields/LoginGroup__c.field-meta.xml
<CustomField>
    <fullName>LoginGroup__c</fullName>
    <description>il gruppo di user associato al dato record di product option.</description>
    <label>Raggruppamento Login</label>
    <length>70</length>
    <type>Text</type>
</CustomField>