force-app/main/default/objects/OrderItem/fields/NumberRateMonthly__c.field-meta.xml
<CustomField>
    <fullName>NumberRateMonthly__c</fullName>
    <formula>Product2.NumberRateMonthly__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numero Rate Mensili</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>