force-app/main/default/objects/OrderItem/fields/OccupantsNumber__c.field-meta.xml
<CustomField>
    <fullName>OccupantsNumber__c</fullName>
    <description>Ll numero Occupanti legato al dato record di order product</description>
    <label>Numero Occupanti</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>