force-app/main/default/objects/OrderItem/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <description>Percentuale per bonus gas.</description>
    <label>Percentuale</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>