force-app/main/default/objects/OrderItem/fields/PercentageF3__c.field-meta.xml
<CustomField>
    <fullName>PercentageF3__c</fullName>
    <description>Percentuale consumo fascia F3.</description>
    <label>Percentuale F3</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>