force-app/main/default/objects/OrderItem/fields/PreviousDateSwitch__c.field-meta.xml
<CustomField>
    <fullName>PreviousDateSwitch__c</fullName>
    <label>Data Precedente Switch</label>
    <type>Date</type>
</CustomField>