force-app/main/default/objects/OrderItem/fields/PriceF0__c.field-meta.xml
<CustomField>
    <fullName>PriceF0__c</fullName>
    <formula>Product2.PriceF0__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prezzo F0</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>