force-app/main/default/objects/OrderItem/fields/PriceF3__c.field-meta.xml
<CustomField>
    <fullName>PriceF3__c</fullName>
    <formula>Product2.PriceF3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prezzo F3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>