force-app/main/default/objects/OrderItem/fields/PriceNetDiscounted__c.field-meta.xml
<CustomField>
    <fullName>PriceNetDiscounted__c</fullName>
    <formula>Product2.PriceDiscounted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prezzo Netto Scontato</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>