force-app/main/default/objects/OrderItem/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <description>Codice Prodotto</description>
    <formula>Product2.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codice Prodotto</label>
    <type>Text</type>
</CustomField>