force-app/main/default/objects/OrderItem/fields/ProductDescriptionSAP__c.field-meta.xml
<CustomField>
    <fullName>ProductDescriptionSAP__c</fullName>
    <formula>Product2.DescriptionSAP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descrizione SAP Prodotto</label>
    <type>Text</type>
</CustomField>