force-app/main/default/objects/OrderItem/fields/ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>ProductFamily__c</fullName>
    <description>Indica la famiglia del Prodotto selezionato.</description>
    <formula>TEXT(Product2.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Famiglia Prodotto</label>
    <type>Text</type>
</CustomField>