force-app/main/default/objects/OrderItem/fields/ProductVersion__c.field-meta.xml
<CustomField>
    <fullName>ProductVersion__c</fullName>
    <description>Indica la versione del Prodotto selezionato.</description>
    <formula>Product2.Version__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Versione Prodotto</label>
    <type>Text</type>
</CustomField>