force-app/main/default/objects/OrderItem/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <description>Gestisce il criterio di eleggibilità del profilo recuparato dalla Quote.</description>
    <label>Profilo</label>
    <length>70</length>
    <type>Text</type>
</CustomField>