force-app/main/default/objects/OrderItem/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quota</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>OrderProducts</relationshipName>
    <type>Lookup</type>
</CustomField>