force-app/main/default/objects/OrderItem/fields/QuoteLine__c.field-meta.xml
<CustomField>
    <fullName>QuoteLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linea Quota</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Order Products (Linea Quota)</relationshipLabel>
    <relationshipName>OrderProducts</relationshipName>
    <type>Lookup</type>
</CustomField>