force-app/main/default/objects/OrderItem/fields/ReductionSurface__c.field-meta.xml
<CustomField>
    <fullName>ReductionSurface__c</fullName>
    <label>Riduzione Superficie</label>
    <length>1</length>
    <type>Text</type>
</CustomField>