force-app/main/default/objects/OrderItem/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Ruolo Profilo.</description>
    <label>Ruolo Profilo</label>
    <length>70</length>
    <type>Text</type>
</CustomField>