force-app/main/default/objects/OrderItem/fields/RoleProfile__c.field-meta.xml
<CustomField>
    <fullName>RoleProfile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo di configurazione usato per indicare il Ruolo/Profilo per il record di criterio nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>Ruolo Profilo</label>
    <referenceTo>ProfileGroup__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>OrderProducts</relationshipName>
    <type>Lookup</type>
</CustomField>