force-app/main/default/objects/OrderItem/fields/ServicePoint__c.field-meta.xml
<CustomField>
    <fullName>ServicePoint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Point</label>
    <referenceTo>ServicePoint__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>