force-app/main/default/objects/OrderItem/fields/Surface__c.field-meta.xml
<CustomField>
    <fullName>Surface__c</fullName>
    <description>La superficie in MQ legata al dato record di order product</description>
    <label>Superfice MQ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>