force-app/main/default/objects/OrderItem/fields/UseCategory__c.field-meta.xml
<CustomField>
    <fullName>UseCategory__c</fullName>
    <description>Campo di configurazione usato per indicare la categoria d&apos;uso per il record di criterio nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>Categoria Uso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_UseCategory</valueSetName>
    </valueSet>
</CustomField>