force-app/main/default/objects/OrderItem/fields/VasActivationDate__c.field-meta.xml
<CustomField>
    <fullName>VasActivationDate__c</fullName>
    <label>VAS - Data Attivazione</label>
    <type>Date</type>
</CustomField>