force-app/main/default/objects/OrderItem/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Versione del Product associato.</description>
    <label>Versione Prodotto</label>
    <length>10</length>
    <type>Text</type>
</CustomField>